Thu Feb 15 06:00:12 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* server.cpp: Renamed tstamp to time_stamp to avoid conflicts with
	  the pre-processor on the Forte 5.2 compiler.  Thanks to Mike
 	  Curtis for reporting this.

	* File_Manager.cpp: Fixed "unreachable code" errors reported by
	  Compaq C++.

Thu Nov 16 17:58:10 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Options.h:
          Fixed small syntax error.

Sat Nov  4 18:18:06 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Rwho_DB_Manager.cpp:
          Add missing #include

Fri Jul 14 14:44:43 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * CM_Server.cpp (receive): Added a cast to (int *) so that
          certain C++ compilers are happy.  Thanks to John Mills
          <jmills@tga.com> for reporting this.

Tue May 23 20:52:29 2000  David L. Levine  <levine@cs.wustl.edu>

        * CM_Server.cpp (receive): one last time.  Use
          ACE_OS::recvfrom instead of the direct system call,
          so it hides the native socklen_t or whatever the OS
          uses.

Tue May 23 07:11:53 2000  David L. Levine  <levine@cs.wustl.edu>

        * CM_Server.cpp (receive): changed type of local sin_len
          to be dependent on ACE_HAS_SOCKLEN_T or ACE_HAS_SIZET_SOCKET_LEN.
          See Mon May 22 21:10:24 2000  David L. Levine  <levine@cs.wustl.edu>

Mon May 22 21:10:24 2000  David L. Levine  <levine@cs.wustl.edu>

        * CM_Server.cpp (receive): changed type of local sin_len
          from int to size_t, to avoid warning from g++ on Linux
          about "change of signedness".  Note that it would be
          better to use ACE_SOCKET_LEN, but that's defined in
          ace/OS.i.  So, it wouldn't be visible with inlining
          disabled.

Mon May 22 21:07:57 2000  David L. Levine  <levine@cs.wustl.edu>

        * BS_Server.cpp (insert): initialize local cmp to 0, to
          prevent warning from g++ 2.91.66 (on Linux) about possible